# safe-spoon

./: .gitignore  LICENSE  README.md  new_test.py  pyproject.toml  requirements.txt  salida_filtering.txt  server.py  test.py  test3.py  tests.py  this_needs_a_better_name.py
aux_scripts/: data_filtering.py  filter.sh  get_reference_corpus_data.py  optimize_max_rel_dist.py  optimize_prompts.py  visualize_annotations.py
config/: config.yaml
src/safe_spoon/: __init__.py  logging_config.py
src/safe_spoon/annotation/: __init__.py  models.py  priority.py  reset.py  risk_profiles.py  rubrics.py  store.py  suggestions.py
src/safe_spoon/clustering/: __init__.py  annotation_unit_model.py  annotation_units.py  hierarchical.py
src/safe_spoon/embeddings/: __init__.py  encoder.py
src/safe_spoon/pipeline/: __init__.py  cli.py  config.py  corpus.py  serialize.py  training.py  tree.py
src/safe_spoon/preprocessing/: __init__.py  preprocessor.py
src/safe_spoon/prompting/: __init__.py  prompter.py
src/safe_spoon/prompting/prompts/: labelling_dft.txt  rubric_suggestion_dft.txt  summarization_dft.txt  unit_labelling_dft.txt
src/safe_spoon/topic_modeling/: __init__.py  lda.py  tm_model.py
src/safe_spoon/utils/: __init__.py  common.py  data_utils.py  renderer.py
src/safe_spoon/visualization/: __init__.py  renderer.py
src/safe_spoon/webapp/: __init__.py  annotation_units_routes.py  core_routes.py  labels_routes.py  rubric_routes.py  state.py
static/: front.html  viz_v5_template.html
static/js/: ui_helpers.js
static/stops/: Economic and Financial.txt  Health.txt  Moral Values and Religion.txt
