[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "safe-spoon"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "tomotopy>=0.12",
    "spacy>=3.7",
    "gensim>=4.3",
    "rbo>=0.1",
    "pyyaml>=6.0",
    "openai>=1.0",
    "ollama>=0.4",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "joblib>=1.4",
    "tqdm>=4.65",
    "click>=8.4.1",
    "kneed>=0.8",
    "Flask>=3.1.3",
    "plotly>=6.8.0",
    "sentence-transformers>=3.0",
    "umap-learn>=0.5",
    "matplotlib>=3.8"
]

[project.optional-dependencies]
viz = ["pyLDAvis>=3.4"]
dev = ["pytest"]

[project.scripts]
safe-spoon-build = "safe_spoon.pipeline.cli:main"
safe-spoon-reset-annotations = "safe_spoon.annotation.reset:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"safe_spoon.prompting.prompts" = ["*.txt"]
